--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ default: &default
 
 development:
   <<: *default
-  database: tasks_app
+  database: start_app
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
